# akitomi-mitsumori

./: BuildInstallers.bat  README.md  package.json
client/: package-lock.json  package.json  test
client/src/: App.css  App.tsx  CompanySettings.tsx  Detail.tsx  EditForm.tsx  PrintPreview.css  PrintPreview.tsx  ServerSettings.tsx  SettingsRoot.tsx  ShainSettings.tsx  loadServerAddress.ts  types.ts  utils.ts  vite-env.d.ts
client/src-tauri/: Cargo.toml  tauri.conf.json
client/src-tauri/capabilities/: default.json
client/src-tauri/src/: lib.rs  main.rs
server/: Cargo.toml  akitomi-server-installer.iss
server/installer/: akitomi-server-installer.iss
server/src/: main.rs
src/: App.tsx  Detail.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
