[package]
name = "akitomi-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.6", features = ["macros", "json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
once_cell = "1"

# ★ Axum 0.6 に完全対応する tower-http
tower-http = { version = "0.4", features = ["cors"] }

tracing = "0.1"
tracing-subscriber = "0.3"
